# chip8_project

./: .gitignore  CMakeLists.txt  README  README.md  WORKSPACE  a.out  chip8  chip8_test1  chip8_test2  chip8_test3  chip8disassembler.c  chip8em  chip8emulator.c  decompile  decompile.c  makefile  output.txt  test.ch8  test1.ch8
data/: working_roms.txt
notes/: init_learn.txt  test.c  testSDL.c  test_ncurse.c  to do for emulator.txt  working op codes
samples/: Works roms.txt  heart_monitor.ch8  morse_demo.ch8  output_max.txt  output_test_hand.txt
src/: BUILD  CMakeLists.txt  chip8.cpp  chip8.hpp  chip8_display.cpp  chip8_display.hpp  main.cpp
test/: BUILD  test-01-load.cpp  test-02-decompile  test-02-funcMap.cpp  test-03-drawDispBlank.cpp
